@@ -11,7 +11,9 @@ import com.example.calculatorservice.repository.OperationRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -118,33 +120,121 @@ public class OperationService {
      * @return сгруппированный ответ операций
      */
     public GroupedOperationsResponse getGroupedOperationsByMaterialId(Long materialId) {
-        List<OperationGroup> allGroups = operationGroupRepository.findAll();
         List<Operation> allOperations = operationRepository.findAll();
 
-        List<Operation> opsToShow = allOperations;
+        List<com.example.calculatorservice.entity.MaterialOperationGroup> mappings = Collections.emptyList();
         if (materialId != null) {
-            List<com.example.calculatorservice.entity.MaterialOperationGroup> mappings =
-                    materialOperationGroupRepository.findAllByMaterialId(materialId);
-            Set<Long> allowedOpIds = mappings.stream()
-                    .map(com.example.calculatorservice.entity.MaterialOperationGroup::getOperationId)
-                    .collect(Collectors.toSet());
-            opsToShow = allOperations.stream()
-                    .filter(op -> allowedOpIds.contains(op.getId()))
-                    .toList();
+            mappings = materialOperationGroupRepository.findAllByMaterialId(materialId);
         }
+
+        if (materialId == null) {
+            List<OperationGroup> allGroups = operationGroupRepository.findAll();
+            List<GroupedOperationsResponse.GroupDto> result = new java.util.ArrayList<>();
+            List<OperationDto> unmatched = new java.util.ArrayList<>();
+
+            for (OperationGroup group : allGroups) {
+                List<Operation> matchingOps = allOperations.stream()
+                        .filter(op -> op.getName() != null &&
+                                op.getName().toLowerCase().contains(group.getName().toLowerCase()))
+                        .toList();
+
+                if (matchingOps.isEmpty()) continue;
+
+                List<OperationDto> groupOperations = matchingOps.stream()
+                        .map(op -> {
+                            OperationDto dto = new OperationDto();
+                            dto.setId(op.getId());
+                            dto.setName(op.getName());
+                            dto.setPrice(op.getPrice());
+                            dto.setUnit(op.getUnit() != null ? op.getUnit().getDisplayName() : null);
+                            dto.setHemWidthMm(op.getHemWidthMm());
+                            dto.setHemCount(op.getHemCount());
+                            return dto;
+                        })
+                        .toList();
+
+                result.add(new GroupedOperationsResponse.GroupDto(
+                        group.getId(), group.getName(), groupOperations
+                ));
+
+                unmatched.addAll(groupOperations);
+            }
+
+            Set<Long> matchedOpIds = unmatched.stream()
+                    .map(com.example.calculatorservice.dto.OperationDto::getId)
+                    .collect(Collectors.toSet());
+
+            List<Operation> remainingOps = allOperations.stream()
+                    .filter(op -> !matchedOpIds.contains(op.getId()))
+                    .toList();
+
+            if (!remainingOps.isEmpty()) {
+                OperationGroup otherGroup = operationGroupRepository.findByName("Прочие")
+                        .orElseGet(() -> {
+                            OperationGroup g = new OperationGroup();
+                            g.setName("Прочие");
+                            return operationGroupRepository.save(g);
+                        });
+
+                List<OperationDto> otherOperations = remainingOps.stream()
+                        .map(op -> {
+                            OperationDto dto = new OperationDto();
+                            dto.setId(op.getId());
+                            dto.setName(op.getName());
+                            dto.setPrice(op.getPrice());
+                            dto.setUnit(op.getUnit() != null ? op.getUnit().getDisplayName() : null);
+                            dto.setHemWidthMm(op.getHemWidthMm());
+                            dto.setHemCount(op.getHemCount());
+                            return dto;
+                        })
+                        .toList();
+                result.add(new GroupedOperationsResponse.GroupDto(
+                        otherGroup.getId(), otherGroup.getName(), otherOperations
+                ));
+            }
+
+            return new GroupedOperationsResponse(result, Collections.emptyList());
+        }
+
+        Map<Long, List<com.example.calculatorservice.entity.MaterialOperationGroup>> mappingsByGroup = mappings.stream()
+                .collect(Collectors.groupingBy(com.example.calculatorservice.entity.MaterialOperationGroup::getOperationGroupId));
 
         List<GroupedOperationsResponse.GroupDto> result = new java.util.ArrayList<>();
-        List<OperationDto> unmatched = new java.util.ArrayList<>();
+        List<OperationDto> ungroupedOperations = new java.util.ArrayList<>();
 
-        for (OperationGroup group : allGroups) {
-            List<Operation> matchingOps = opsToShow.stream()
-                    .filter(op -> op.getName() != null &&
-                            op.getName().toLowerCase().contains(group.getName().toLowerCase()))
-                    .toList();
+        for (Map.Entry<Long, List<com.example.calculatorservice.entity.MaterialOperationGroup>> entry : mappingsByGroup.entrySet()) {
+            Long groupId = entry.getKey();
+            List<com.example.calculatorservice.entity.MaterialOperationGroup> groupMappings = entry.getValue();
 
-            if (matchingOps.isEmpty()) continue;
+            if (groupId == null) {
+                for (com.example.calculatorservice.entity.MaterialOperationGroup mog : groupMappings) {
+                    Operation op = allOperations.stream()
+                            .filter(o -> o.getId().equals(mog.getOperationId()))
+                            .findFirst()
+                            .orElse(null);
+                    if (op != null) {
+                        OperationDto dto = new OperationDto();
+                        dto.setId(op.getId());
+                        dto.setName(op.getName());
+                        dto.setPrice(op.getPrice());
+                        dto.setUnit(op.getUnit() != null ? op.getUnit().getDisplayName() : null);
+                        dto.setHemWidthMm(op.getHemWidthMm());
+                        dto.setHemCount(op.getHemCount());
+                        ungroupedOperations.add(dto);
+                    }
+                }
+                continue;
+            }
 
-            List<OperationDto> groupOperations = matchingOps.stream()
+            OperationGroup group = operationGroupRepository.findById(groupId).orElse(null);
+            if (group == null) continue;
+
+            List<OperationDto> groupOperations = groupMappings.stream()
+                    .map(mog -> allOperations.stream()
+                            .filter(op -> op.getId().equals(mog.getOperationId()))
+                            .findFirst()
+                            .orElse(null))
+                    .filter(java.util.Objects::nonNull)
                     .map(op -> {
                         OperationDto dto = new OperationDto();
                         dto.setId(op.getId());
@@ -155,48 +245,18 @@ public class OperationService {
                         dto.setHemCount(op.getHemCount());
                         return dto;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
-            result.add(new GroupedOperationsResponse.GroupDto(
-                    group.getId(), group.getName(), groupOperations
-            ));
-
-            unmatched.addAll(groupOperations);
+            if (!groupOperations.isEmpty()) {
+                result.add(new GroupedOperationsResponse.GroupDto(
+                        group.getId(), group.getName(), groupOperations
+                ));
+            }
         }
 
-        Set<Long> matchedOpIds = unmatched.stream()
-                .map(com.example.calculatorservice.dto.OperationDto::getId)
-                .collect(Collectors.toSet());
-
-        List<Operation> remainingOps = opsToShow.stream()
-                .filter(op -> !matchedOpIds.contains(op.getId()))
-                .toList();
-
-        if (!remainingOps.isEmpty()) {
-            OperationGroup otherGroup = operationGroupRepository.findByName("Прочие")
-                    .orElseGet(() -> {
-                        OperationGroup g = new OperationGroup();
-                        g.setName("Прочие");
-                        return operationGroupRepository.save(g);
-                    });
-
-            List<OperationDto> otherOperations = remainingOps.stream()
-                    .map(op -> {
-                        OperationDto dto = new OperationDto();
-                        dto.setId(op.getId());
-                        dto.setName(op.getName());
-                        dto.setPrice(op.getPrice());
-                        dto.setUnit(op.getUnit() != null ? op.getUnit().getDisplayName() : null);
-                        dto.setHemWidthMm(op.getHemWidthMm());
-                        dto.setHemCount(op.getHemCount());
-                        return dto;
-                    })
-                    .toList();
-            result.add(new GroupedOperationsResponse.GroupDto(
-                    otherGroup.getId(), otherGroup.getName(), otherOperations
-            ));
-        }
-
-        return new GroupedOperationsResponse(result);
+        GroupedOperationsResponse response = new GroupedOperationsResponse();
+        response.setGroups(result);
+        response.setUngroupedOperations(ungroupedOperations);
+        return response;
     }
 }
